--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -69,3 +69,4 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           prerelease: true
           tag: v${{ steps.get_version.outputs.VERSION }}
+          commit: "testFeatures"
