--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -65,8 +65,9 @@ jobs:
         id: create_release
         uses: ncipollo/release-action@v1
         with:
-          body: ${{ env.CHANGELOG }}
-          token: ${{ secrets.GITHUB_TOKEN }}
+          body: "${{ env.CHANGELOG }}"
+          token: "${{ secrets.GITHUB_TOKEN }}"
           prerelease: true
-          tag: v${{ steps.get_version.outputs.VERSION }}
-          commit: "testFeatures"
+          tag: "v${{ steps.get_version.outputs.VERSION }}"
+          commit: "master"
+          allowUpdates: true
